--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^12.0.5",
+    "awilix-express": "^9.0.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "redis": "^5.0.0"
   }
 }
