--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "nodemailer": "^7.0.2",
+    "pg": "^8.15.6",
     "redis": "^5.0.0"
   }
 }
