--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "lint": "npx eslint \"**/*.js\"",
+    "lint:fix": "npm run lint -- --fix",
     "db:reset-migrations": "knex migrate:rollback --all && knex migrate:latest",
     "db:reset-data": "npx knex seed:run --specific=truncate_all.js",
     "db:initial-seed": "npx knex seed:run --specific=seed_initial.js",
@@ -23,6 +25,7 @@
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
+    "eslint": "^8.57.0",
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
