--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "knex": "^3.1.0",
     "nodemailer": "^7.0.2",
     "pg": "^8.15.6",
-    "redis": "^5.0.0"
+    "redis": "^5.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
