--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^9.0.1",
     "@faker-js/faker": "^9.7.0",
     "awilix": "^12.0.5",
     "awilix-express": "^9.0.2",
     "bcrypt": "^5.1.1",
+    "cls-hooked": "^4.2.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "eslint": "^8.57.0",
