--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,23 +28,37 @@ services:
     networks:
       - backend
 
-elasticsearch:
-  image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
-  container_name: elasticsearch
-  environment:
-    - discovery.type=single-node
-    - xpack.security.enabled=true
-    - ELASTIC_USERNAME=${ELASTICSEARCH_USERNAME}
-    - ELASTIC_PASSWORD=${ELASTICSEARCH_PASSWORD}
-    - xpack.security.transport.ssl.enabled=false
-    - xpack.security.http.ssl.enabled=false
-    - ES_JAVA_OPTS=-Xms512m -Xmx512m
-  ports:
-    - "9200:9200"
-  volumes:
-    - esdata:/usr/share/elasticsearch/data
-  networks:
-    - backend
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=true
+      - ELASTIC_USERNAME=${ELASTICSEARCH_USERNAME}
+      - ELASTIC_PASSWORD=${ELASTICSEARCH_PASSWORD}
+      - xpack.security.transport.ssl.enabled=false
+      - xpack.security.http.ssl.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ports:
+      - "9200:9200"
+    volumes:
+      - es-data:/usr/share/elasticsearch/data
+    networks:
+      - backend
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.12.0
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=${KIBANA_USERNAME}
+      - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+    networks:
+      - backend
 
 volumes:
   redis-data:
